# pydontology

./: .gitignore  AGENTS.md  Architecture.md  README.md  example.py  example2.py  example3.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: ai-pipeline.yml
.github/scripts/: check-collaborator.js  list-comments.js
.github/workflows/: ai-chat.yml  ai-implement.yml  ai-pipeline.yml  ai-review.yml  test.yml
agents/: architect-prompt.txt  coder-prompt.txt  reviewer-prompt.txt
agents/state/: implementation.md  tests.md
docs/: 404.html  index.html  index.md  objects.inv  reference.md  sitemap.xml
docs/reference/: index.html
examples/: example.py
mkdocs/: index.md  reference.md
pydontology/: __init__.py  api.py  models.py  owl.py  pydontology.py  rdfs.py  settings.py  shacl.py  validators.py
site/: 404.html  index.html
site/reference/: index.html
tests/: conftest.py  test.py  test_api.py  test_api_sparql.py  test_issue15.py  test_jsonld_literals.py  test_onto.py  test_onto_settings.py  test_rdflib.py  test_settings.py  test_shacl.py
